<resources>
    <string name="app_name">Nostradama Real</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_game_home">game_home</string>
    <string name="next_button">Next</string>
    <string name="button_new_game">New Game</string>
    <string name="button_load_game">Load game</string>
    <string name="account_register">Please wait</string>
    <string name="button_register">Finish registration</string>
    <string name="tv_fill">1/3 Please fill in the form</string>
    <string name="tv_name">Name</string>
    <string name="tv_password">Password</string>
    <string name="tv_email">E-mail</string>
    <string name="tv_city">City</string>
    <string name="error_shortpassword">Password must contain more than 7 characters</string>
    <string name="agreement_link"><p>I agree with <u>
        <a href="">bussiness conditions</a>
    </u></p></string>
    <string name="button_login">Login with existing account</string>
    <string name="button_noconnection">No internet connection avaible</string>
    <string name="gamehome_helper">Helper</string>
    <string name="gamehome_answers">Answers</string>
    <string name="gamehome_back">Save and quit</string>
    <string name="tv_fill2">2/3 Please fill in the form</string>
    <string name="tv_fill3">3/3 Please fill in the form</string>
    <string name="tv_fill1">1/3 Please fill in the form</string>
    <string name="rv_name">Game name</string>
    <string name="rv_saved">Saved</string>
    <string name="rv_players">Players</string>
    <string name="game_home_player">Player</string>
    <string name="game_home_round">Round</string>
    <string name="game_home_property">Property</string>
    <string name="game_home_gamename">Game name:</string>
    <string name="player_home_1">1. Player state</string>
    <string name="player_home_5">5. House and Flat</string>
    <string name="player_home_3">3. Account Balance</string>
    <string name="player_home_2">2. Credit</string>
    <string name="player_home_4">4. Property</string>
    <string name="add_round">Add Round</string>
    <string name="player_info_player">Player:</string>
    <string name="player_info_rounds">Number of rounds:</string>
    <string name="activity_playerhouse_buy">Buy</string>
    <string name="activity_playerhouse_sell">Sell</string>
    <string name="activity_playerhouse_house">House</string>
    <string name="activity_playerhouse_flat">Flat</string>
    <string name="activity_playerhouse_puzzles">Puzzles:</string>
    <string name="activity_player_property_dices">Dices</string>
    <string name="activity_player_property_gasstations">Gas stations</string>
    <string name="activity_player_property_grocery">Grocery</string>
    <string name="activity_player_property_bussinesscentrum">Bussiness centrum</string>
    <string name="activity_player_accountstate_balance">Balance:</string>
    <string name="activity_player_state_wife">Has partner?</string>
    <string name="activity_player_state_job">Has job?</string>
    <string name="activity_player_state_flat">Owns flat?</string>
    <string name="activity_player_state_car">Owns car?</string>
    <string name="activity_player_state_salary">Salary</string>
    <string name="activity_player_state_knowledge">Knowledge points</string>
    <string name="activity_player_state_financecentre">Finance centre</string>
    <string name="activity_player_state_round">Since round</string>
    <string name="activity_new_game">Active</string>
    <string name="activity_new_game_player">Name of Player</string>
    <string name="activity_new_game_create">Create a New Game</string>
    <string name="activity_new_game_gamename">Game Name</string>
</resources>
