<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@mipmap/bg_signup_1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:weightSum="90">

        <sk.mjmgames.nostradamareal.widgets.MJMTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_fill1"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:layout_weight="10"
            android:textStyle="bold"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <sk.mjmgames.nostradamareal.widgets.MJMEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName"
            android:background="@drawable/rectwithborder"
            android:layout_weight="10"
            android:gravity="center"
            android:hint="@string/tv_name"
            android:textColorHint="#000000"
            android:textStyle="bold"
            android:textSize="28sp"
            android:singleLine="true"
            android:imeOptions="flagNoExtractUi"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20" />

        <sk.mjmgames.nostradamareal.widgets.MJMEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:background="@drawable/rectwithborder"
            android:layout_weight="10"
            android:textSize="28sp"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:hint="@string/tv_password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            android:textStyle="bold"
            android:imeOptions="flagNoExtractUi"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20" />

        <sk.mjmgames.nostradamareal.widgets.MJMButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:id="@+id/btNext1"
            android:textColor="#ffffff"
            android:background="@drawable/button_rect"
            android:textSize="28sp"
            android:shadowColor="#000000"
            android:layout_weight="10"
            />


    </LinearLayout>


</RelativeLayout>