<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textSize="16dp"
        android:text="@string/rv_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rv_saved"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="72dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rv_players"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"/>




    <TextView
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:id="@+id/tvGamename"
        android:text="u Filipa"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="2"
        android:textSize="14sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="16dp"
        android:id="@+id/tvPlayers" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:id="@+id/tvSaved"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="15.6.2015"
        android:layout_marginRight="72dp"/>



</RelativeLayout>