<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:weightSum="1"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight=".5"
        android:background="#666666">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/activity_playerhouse_house"
            android:id="@+id/hPuzzles"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/progressBar2"
            android:layout_marginTop="30dp"
            android:layout_below="@id/hPuzzles"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:progressDrawable="@drawable/custom_progressbar"
            android:background="@mipmap/preloader"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_playerhouse_puzzles"
            android:id="@+id/textView3"
            android:layout_below="@+id/progressBar2"
            android:layout_alignRight="@+id/hPuzzles"
            android:layout_alignEnd="@+id/hPuzzles"
            android:layout_marginTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/32"
            android:id="@+id/textView4"
            android:layout_alignTop="@+id/textView3"
            android:layout_toRightOf="@+id/hPuzzles"
            android:layout_toEndOf="@+id/hPuzzles"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:weightSum="1"
            android:layout_below="@+id/textView3">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/activity_playerhouse_buy"
                android:layout_weight="0.5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/activity_playerhouse_sell"
                android:layout_weight="0.5"/>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight=".5">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/activity_playerhouse_flat"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/progressBar3"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:progressDrawable="@drawable/custom_progressbar"
            android:background="@mipmap/preloader"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/activity_playerhouse_puzzles"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/progressBar3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/32"
            android:id="@+id/textView5"
            android:layout_alignTop="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="1"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/activity_playerhouse_buy"
                android:layout_weight="0.5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/activity_playerhouse_sell"
                android:layout_weight="0.5"/>


        </LinearLayout>

    </RelativeLayout>


</LinearLayout>